cabal-version:       2.2
name:                qmass
version:             0.1.0.0
synopsis:            Calculate the running quark mass
-- description:
homepage:            https://github.com/cbpark/qmass
bug-reports:         https://github.com/cbpark/qmass/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2020 Chan Beom Park
category:            Physics
extra-source-files:  README.md
                     csrc/alphas.cc
                     csrc/alphas.h

executable qmass
  main-is:             qmass.hs
  other-modules:       HEP.Data.AlphaS
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -funbox-strict-fields

  cxx-sources:         csrc/alphas.cc
  include-dirs:        csrc
  cxx-options:         -g -O2 -m64 -Wall -Wextra -pedantic -fPIC
  extra-libraries:     LHAPDF, stdc++